# CoVeX

./: .env.example  .gitignore  README.md  sAPI_kill.sh  sAPI_start.sh  sPlayGround_start.sh
_bmad-output/implementation-artifacts/: 1-1-set-up-initial-project-from-starter-template.md  1-2-implementer-le-moteur-de-scoring-et-de-decision.md  1-3-ajouter-le-routage-automatique-de-contexte-metier.md  1-4-integrer-l-adaptateur-d-inference-locale-avec-timeouts-et-metriques.md  1-5-standardiser-la-gestion-d-erreurs-api-explicites.md  2-1-charger-et-valider-la-configuration-des-modeles.md  2-2-gerer-les-prompts-metier-via-configuration.md  2-3-appliquer-la-resolution-prompt-vers-modele-et-parametres-provider.md  2-5-supporter-un-provider-d-inference-distant-configurable.md  (+7 more)
backend/: .env.example  pyproject.toml
backend/src/: analysis.py  analysis_profiles_config.py  inference.py  main.py  settings.py
backend/tests/: test_analysis_logging.py  test_api_error_visibility.py  test_backend_smoke.py  test_config_yaml.py  test_engine_selection_cache.py  test_inference_errors.py
backend/tests/common/: test_settings_logging.py
config/: analysis_profiles.yaml  inference_engines.yaml
datasets/: golden_dataset.jsonl
docs/: ANALYSIS_PROFILES_METIER.md  API_REFERENCE.md  ARCHITECTURE.md  IMPACT_MODELES_PROFILS.md  INFERENCE_ENGINES.md  PLAYGROUND.md  SELECT_ENGINES.md  rapport-activite-git.md
playground/: .env.example  pyproject.toml
playground/src/: api_client.py  app.py  playground.py
rapport/: CoVeX-1-rapport.md  CoVeX-2-annexes.md
tools/: __init__.py
(+27 files in other folders)
